CSS scrollbar issues fixed

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -510,7 +510,6 @@ ul {
     float: left;
     width: 22%;
     padding-left: 1em;
-    border-left: 2px solid #e5dddd;
 }
 
 .viewOneAttrCol ul, .viewOneCapacityCol ul {
